fix spacing

--- a/sass/schedule.scss
+++ b/sass/schedule.scss
@@ -103,6 +103,11 @@ td.wcb-session-ambassador-program {
             width: 100%;
         }
     }
+
+    .wcpt-session-title {
+        margin-bottom: 15px;
+    }
+
     .wcpt-time { 
         font-weight: bold;
         background-color: #eeeeee;
